# openswbf

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  loader.js  openswbf.js  openswbf.wasm  sw.js
.github/workflows/: build-native.yml  build-wasm.yml
app/lvl_dump/: CMakeLists.txt  main.cpp
app/openswbf/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  EmscriptenToolchain.cmake
docs/: ARCHITECTURE.md  BUILDING.md  FILE_FORMATS.md
src/assets/: CMakeLists.txt
src/assets/lvl/: animation_loader.cpp  animation_loader.h  effects_loader.cpp  effects_loader.h  entity_class_loader.cpp  entity_class_loader.h  font_loader.cpp  font_loader.h  hud_loader.cpp  hud_loader.h  light_loader.cpp  light_loader.h  lvl_loader.cpp  lvl_loader.h  model_loader.cpp  model_loader.h  music_loader.cpp  music_loader.h  path_loader.cpp  path_loader.h  script_loader.cpp  script_loader.h  skeleton_loader.cpp  skeleton_loader.h  sky_loader.cpp  sky_loader.h  sound_loader.cpp  sound_loader.h  terrain_loader.cpp  terrain_loader.h  texture_loader.cpp  texture_loader.h  world_loader.cpp  world_loader.h
src/assets/odf/: odf_parser.cpp  odf_parser.h
src/assets/ucfb/: chunk_reader.cpp  chunk_reader.h  chunk_types.h
src/audio/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  audio_device.cpp  audio_device.h  audio_manager.cpp  audio_manager.h  audio_source.cpp  audio_source.h  game_audio.cpp  game_audio.h
src/core/: CMakeLists.txt  config.cpp  config.h  crc.cpp  crc.h  filesystem.cpp  filesystem.h  log.cpp  log.h  memory.cpp  memory.h  types.h
src/game/: CMakeLists.txt  ai_system.cpp  ai_system.h  animation.h  animation_system.cpp  animation_system.h  command_post_system.cpp  command_post_system.h  conquest_mode.cpp  conquest_mode.h  entity.h  entity_manager.cpp  entity_manager.h  game_systems.cpp  game_systems.h  health_system.cpp  health_system.h  hud.cpp  hud.h  menu.cpp  menu.h  pathfinder.cpp  pathfinder.h  player_controller.cpp  player_controller.h  scoreboard.cpp  scoreboard.h  skeleton.cpp  skeleton.h  spawn_system.cpp  spawn_system.h  vehicle_system.cpp  vehicle_system.h  weapon_system.cpp  weapon_system.h
src/game/components/: transform.cpp  transform.h
src/input/: CMakeLists.txt  input_system.cpp  input_system.h  touch_input.cpp  touch_input.h
src/physics/: CMakeLists.txt  physics_world.cpp  physics_world.h  stub.cpp
src/platform/: CMakeLists.txt  platform.h  platform_native.cpp  platform_web.cpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.h  mesh_renderer.cpp  mesh_renderer.h  minimap_renderer.cpp  minimap_renderer.h  model_types.h  particle_effects.cpp  particle_effects.h  particle_renderer.cpp  particle_renderer.h  particle_system.cpp  particle_system.h  scene_graph.cpp  scene_graph.h  sky_renderer.cpp  sky_renderer.h  terrain_renderer.cpp  terrain_renderer.h  ui_renderer.cpp  ui_renderer.h
src/renderer/backend/: gl_buffers.cpp  gl_buffers.h  gl_context.cpp  gl_context.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h
src/scripting/: CMakeLists.txt  lua_runtime.cpp  lua_runtime.h  swbf_api.cpp  swbf_api.h
tests/unit/: CMakeLists.txt  test_ai_system.cpp  test_camera.cpp  test_chunk_reader.cpp  test_command_post_system.cpp  test_conquest_mode.cpp  test_crc.cpp  test_entity_manager.cpp  test_health_system.cpp  test_odf_parser.cpp  test_spawn_system.cpp  test_weapon_system.cpp
web/: index.html  shell.html  style.css
